fix: fix some wrong documentation and ajust the code to be equals to the challenge
