# backend/lista_de_produtos/src/modules/product/useCases/createProduct/CreateProductController.ts
@@ -5,9 +5,9 @@ class CreateProductController {
   constructor(private createProductUseCase: CreateProductUseCase) { }
 
   handle(request: Request, response: Response) {
-    const { item, preco } = request.body;
+    const { id, item, preco } = request.body;
 
-    const product = this.createProductUseCase.execute({ item, preco });
+    const product = this.createProductUseCase.execute({ id, item, preco });
 
     return response.status(201).json(product);
   }
